add jetty plugin, bootstrap theme