@@ -134,6 +134,11 @@
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2</version>
+        </dependency>
 
     </dependencies>
     <profiles>
@@ -189,21 +194,30 @@
             </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.10</version>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>8.0.0.M2</version>
                 <configuration>
-                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <jvmArgs>-Xms1024m -Xmx1024m -agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n
+                        -XX:MaxPermSize=384m
+                    </jvmArgs>
+                    <webAppConfig>
+                        <contextPath>/lifeplan</contextPath>
+                        <allowDuplicateFragmentNames>true</allowDuplicateFragmentNames>
+                    </webAppConfig>
+                    <scanIntervalSeconds>5</scanIntervalSeconds>
                     <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                            <port>8095</port>
+                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
+                            <port>8090</port>
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
+                        <!--<connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
+                            <port>8443</port>
+                            <maxIdleTime>60000</maxIdleTime>
+                            <keystore>${project.basedir}/jetty-ssl.keystore</keystore>
+                            <password>jetty6</password>
+                            <keyPassword>jetty6</keyPassword>
+                        </connector>-->
                     </connectors>
-                    <!-- <webapp>
-                         <contextPath>/</contextPath>
-                     </webapp>-->
-                    <stopKey/>
-                    <stopPort/>
                 </configuration>
             </plugin>
         </plugins>
